--- a/MobileRobots.ui
+++ b/MobileRobots.ui
@@ -16,12 +16,6 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>320</width>
-    <height>320</height>
-   </size>
-  </property>
   <property name="sizeIncrement">
    <size>
     <width>32</width>
@@ -49,12 +43,6 @@
       <width>231</width>
       <height>221</height>
      </rect>
-    </property>
-    <property name="sizeIncrement">
-     <size>
-      <width>32</width>
-      <height>32</height>
-     </size>
     </property>
     <property name="mouseTracking">
      <bool>false</bool>
@@ -122,10 +110,28 @@
      <x>0</x>
      <y>0</y>
      <width>515</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="maximumSize">
+     <size>
+      <width>16777215</width>
+      <height>16777215</height>
+     </size>
+    </property>
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen"/>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
